deploy/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: jchen42703/chinese-translation-api:latest
          ports:
            - containerPort: 5001
          # env:
          #   - name: PG_HOST
          #     value: postgres-cluster-ip-service
          #   - name: PG_PORT
          #     value: "5432"
          #   - name: PGUSER
          #     value: postgres
          #   - name: PGDATABASE
          #     value: postgres
