deploy/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # https://github.com/cert-manager/cert-manager/issues/2826
    # Only add this after you get the prod certificate
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # cert-manager.io/issuer:
    #   "letsencrypt-staging"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issuer:
      "letsencrypt-production"
      # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
    # # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    # kubernetes.io/ingress.global-static-ip-name: web-ip
spec:
  tls:
    - hosts:
        - chinesetranslation.com
      secretName: chinesetranslation-tls
  rules:
    - host: chinesetranslation.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3006
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 5001
